changes from paxy repo to Shylock repo

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,18 +1,18 @@
 {sys, [
        {lib_dirs, ["../ebin", "../.."]},
-       {rel, "paxy", "1",
+       {rel, "Shylock", "1",
         [
          kernel,
          stdlib,
          sasl,
-         paxy
+         Shylock
         ]},
        {rel, "start_clean", "",
         [
          kernel,
          stdlib
         ]},
-       {boot_rel, "paxy"},
+       {boot_rel, "Shylock"},
        {profile, embedded},
        {excl_archive_filters, [".*"]}, %% Do not archive built libs
        {excl_sys_filters, ["^bin/.*",
@@ -23,19 +23,19 @@
        %% following line.
        {app, hipe, [{incl_cond, exclude}]},
        {app, sasl, [{incl_cond, include}]},
-       {app, paxy, [{incl_cond, include}]}
+       {app, Shylock, [{incl_cond, include}]}
       ]}.
 
-{target_dir, "paxy"}.
+{target_dir, "Shylock"}.
 
 {overlay, [
            {mkdir, "log/sasl"},
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-           {copy, "files/paxy", "bin/paxy"},
+           {copy, "files/Shylock", "bin/Shylock"},
            {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
-           {copy, "files/paxy.cmd", "bin/paxy.cmd"},
+           {copy, "files/Shylock.cmd", "bin/Shylock.cmd"},
            {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
            {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
-%%%{copy, "paxy.config", "paxy.config"}
+%%%{copy, "Shylock.config", "Shylock.config"}
           ]}.
