--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,41 +1,42 @@
 {sys, [
-       {lib_dirs, ["../ebin", "../.."]},
-       {rel, "Shylock", "1",
+       {lib_dirs, ["../../"]},
+       {erts, [{mod_cond, derived}, {app_file, strip}]},
+       {app_file, strip},
+       {rel, "shylock", "1",
         [
          kernel,
          stdlib,
          sasl,
-         Shylock
+         shylock
         ]},
        {rel, "start_clean", "",
         [
          kernel,
          stdlib
         ]},
-       {boot_rel, "Shylock"},
+       {boot_rel, "shylock"},
        {profile, embedded},
+       {incl_cond, derived},
+       {mod_cond, derived},
        {excl_archive_filters, [".*"]}, %% Do not archive built libs
-       {excl_sys_filters, ["^bin/.*",
-                           "^erts.*/bin/(dialyzer|typer)"]},
-
-       %% Including HiPE can cause issues generating your first upgrade.
-       %% If you plan to distribute HiPE in your release remove the
-       %% following line.
+       {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
+                           "^erts.*/(doc|info|include|lib|man|src)"]},
+       {excl_app_filters, ["\.gitignore"]},
        {app, hipe, [{incl_cond, exclude}]},
        {app, sasl, [{incl_cond, include}]},
-       {app, Shylock, [{incl_cond, include}]}
+       {app, shylock, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
-{target_dir, "Shylock"}.
+{target_dir, "shylock"}.
 
 {overlay, [
            {mkdir, "log/sasl"},
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-           {copy, "files/Shylock", "bin/Shylock"},
-           {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
-           {copy, "files/Shylock.cmd", "bin/Shylock.cmd"},
+           {copy, "files/shylock", "bin/shylock"},
+           {copy, "files/shylock.cmd", "bin/shylock.cmd"},
            {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
+           {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
+           {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
            {copy, "files/vm.args", "releases/\{\{rel_vsn\}\}/vm.args"}
-%%%{copy, "Shylock.config", "Shylock.config"}
           ]}.
